--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -21,13 +21,14 @@ jobs:
           node-version: '20.x'
 
       - name: Install dependecies
-        run: npm install
+        run: npm install --prefix ./app
+
 
       - name: Test
-        run: npm test
+        run: npm test --prefix ./app
 
       - name: Build
-        run: npm run build
+        run: npm run build --prefix ./app
 
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v3
