--- a/app/package.json
+++ b/app/package.json
@@ -6,18 +6,23 @@
     "start": "npx ts-node src/main.ts",
     "serve": "node dist/main.js",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.3",
     "typescript": "^5.4.5"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
-    "express": "^4.19.2"
+    "@types/supertest": "^6.0.2",
+    "express": "^4.19.2",
+    "supertest": "^7.0.0"
   }
 }
