--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
 
 images:
 - name: app-express
-  newName: /app-express
+  newName: rubemnascimento81/app-express
   newTag: 505ec7d7a635edb0f4891d5c94c87d6b63b48e99
